# WyrmStore

./: Cargo.toml  LICENSE  README.md  README.mdes  plan.md
config/: memoryd.mini.toml  memoryd.prod.toml
src/: config.rs  daemon.rs  embed.rs  lib.rs  main.rs  store.rs  types.rs
tests/: e2e.rs  e2e_load.rs  e2e_mini.rs
tests/fixtures/: basic.jsonl  corrections_template.jsonl  fastembed.jsonl
tests/support/: hash_embed.rs  mod.rs
