[package]
name = "memoryd"
version = "0.1.0"
edition = "2021"

[features]
default = []
load-test = []
mini-test = []


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
fastembed = { version = "5"}
hnsw_rs = "0.3.1"
toml = "0.8"
tiktoken-rs = "0.9"

[dev-dependencies]
